old-code/sa/istio-system/istio-system/auth-policy-global/auth-policy-global-allow-restricted.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-global-allow-restricted
  namespace: istio-system 
spec:
  selector:
    matchLabels:
      app: istio-extra-ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        ipBlocks:
          - "16.162.67.65"          # AWS Infra Egress NAT B
          - "18.167.78.100"         # AWS Infra Egress NAT A
          - "18.166.100.153"        # AWS Infra EKS Cluster EIP
          - "18.167.175.69"         # AWS Infra EKS Cluster EIP
          - "116.50.242.66"         # PH-SL-Office
          - "155.137.78.226"        # PH-SL-Office
          - "103.104.100.130"       # PH-SL-Office
          - "34.92.160.3"           # PPU Egress NAT EIP
          - "34.96.212.69"          # PPU GKE Ingress EIP
          - "34.92.71.145"          # Gitlab Server VPC Egress NAT 
          # Cloudflare start
          - "173.245.48.0/20"
          - "103.21.244.0/22"
          - "103.22.200.0/22"
          - "103.31.4.0/22" 
          - "141.101.64.0/18"
          - "108.162.192.0/18" 
          - "190.93.240.0/20"
          - "188.114.96.0/20"
          - "197.234.240.0/22" 
          - "198.41.128.0/17"
          - "162.158.0.0/15" 
          - "104.16.0.0/13"
          - "104.24.0.0/14"
          - "172.64.0.0/13"
          - "131.0.72.0/22"
          # Cloudflare end
